# puncta-analysis

./: .gitignore  README.md  app.py  config.yaml  launch_mac.command  launch_windows.bat  pyproject.toml  setup_mac.command  setup_windows.bat
data/102/: 102_A2_image1_results_Yena.csv  102_A3_image1_20x-01_maxproj_ch2.tif  102_A3_image1_20x-01_maxproj_ch2_Manual_Results_Christina.csv
data/96/: 96_A3_image3_Ch2_cropped.tif
data/98/: 98_A3_image3_20x-01_maxproj_ch2.tif  98_A3_image3_20x-01_maxproj_manual_results_Yena.csv
data/sample/102/: 102_A3_image1_20x-01_maxproj_ch2_manualCount_results_Ananya.csv
data/sample/96/: 96_A3_image3_20x-01_maxproj_ch2_Manual_Results_Christina.csv  96_A3_image3_20x-01_maxproj_manual_results_Yena.csv
data/sample/98/: 98_A3_image3_20x-01_maxproj_ch2_Manual_results_Christina.csv
src/puncta_analysis/: __init__.py  cli.py  config.py  detection.py  estimation.py  io_utils.py  pipeline.py  postprocess.py  preprocess.py  tuning.py  visualization.py
